vitals rewrite